fixed upper part alignment

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   --primary-color: #FF9900;
   --secondary-color: #FFC700;
   --minor-color: #FFE7C2;
-  --bg: #F2EDE5;
+  --bg: #f5f4ed;
   --currentBorderColor: #FF9900;
 
   /* Font */
@@ -46,7 +46,7 @@
   --secondary-brown: #C3AF8E;
 
 
-  --shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.2);
+  --shadow: 0 0.2rem 0.5rem rgba(41, 39, 39, 0.1);
 }
 
 @font-face {
@@ -113,11 +113,12 @@ div.topBar {
 }
 
 div.upperPart {
-  /*background-color: var(--primary-purple);*/
   display: flex;
   flex-direction: row;
   width: 100%;
   height: 100%;
+  flex-wrap: wrap;
+  align-content: center;
 }
 
 div.lowerPart {
